<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen_de_la_mascota"
            android:src="@drawable/perro1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgHuesoBlanco"
                android:layout_width="@dimen/hueso_ancho"
                android:layout_height="@dimen/hueso_alto"
                android:layout_weight="1"
                android:contentDescription="@string/marcar_like_a_esta_mascota"
                android:src="@drawable/huesoblanco" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:gravity="center"
                android:text="@string/nombre_mascota"
                android:textSize="@dimen/nombre_mascota"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContadorLikes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dummy_contador_likes"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgHuestoAmarillo"
                android:layout_width="@dimen/hueso_ancho"
                android:layout_height="@dimen/hueso_alto"
                android:layout_weight="1"
                android:contentDescription="@string/n_mero_de_veces_que_fue_dado_like"
                android:src="@drawable/huesoamarillo" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>