<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ContactoActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/miActionBar"
        layout="@layout/mi_action_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/env_e_un_correo_al_contacto"
        android:textSize="@dimen/fuente_cabecera"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:hint="@string/email_hint_nombre"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage"
        android:hint="@string/email_hint_mensaje"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>